--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
       ></canvas>
     </div>
 
+    <script src="terser.bundle.js"></script>
     <script src="scratch-adpcm.js?n=1"></script>
     <script src="fonturis.js?n=1"></script>
     <script src="wavefile.js?n=1"></script>
